@@ -1,3 +1,8 @@
+2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.Debugging.Client/StackFrame.cs: Add property for
+	  flagging frame as external code.
+
 2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.Debugging.Client/DebuggerSessionOptions.cs: Add setting
